--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,3 +1,37 @@
-<p>
-  recipe-detail works!
-</p>
+<!-- Recipe detail structure -->
+<div class="row">
+  <div class="col-xs-12">
+    <img src="" alt="" class="img-responsive">
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <h1>Recipe Name</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="btn-group">
+      <button 
+      type="button" 
+      class="btn btn-primary dropdown-toggle"
+      >Manage recipe
+      </button>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Add Ingredients to shopping list</a>
+          <a class="dropdown-item" href="#">Edit recipes</a>
+          <a class="dropdown-item" href="#">Delete recipes</a>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+      Description
+    </div>
+  </div>
+<div class="row">
+  <div class="col-xs-12">
+    Ingredients
+  </div>
+</div>
