--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,3 +1,4 @@
+<!-- Create a recipe card -->
 <div class="row">
     <div class="col-xs-12">
         <button class="btn btn-success">New recipe</button>
@@ -6,7 +7,7 @@
 <hr>
 <div class="row">
     <div class="col-xs-12">
-        <div class="card" style="width: 18rem;" *ngFor="let recipe of recipes">
+        <div class="card" style="width: 15rem;" *ngFor="let recipe of recipes">
             <img src="{{ recipe.imagePath }}" class="card-img-top" alt="{{recipe.name}}">
             <div class="card-body">
                 <h5 class="card-title">{{ recipe.name }}</h5>
