passing data with property binding

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,3 +1,12 @@
-<p>
-  recipe-item works!
-</p>
+<div 
+class="card" 
+style="width: 15rem;">
+    <img 
+    src="{{ recipe.imagePath }}" 
+    class="card-img-top" 
+    alt="{{recipe.name}}">
+    <div class="card-body">
+        <h5 class="card-title">{{ recipe.name }}</h5>
+        <p class="card-text">{{ recipe.description }}</p>
+    </div>
+</div>
