--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,14 +7,9 @@
 <hr>
 <div class="row">
     <div class="col-xs-12">
-        <div class="card" style="width: 15rem;" *ngFor="let recipe of recipes">
-            <img src="{{ recipe.imagePath }}" class="card-img-top" alt="{{recipe.name}}">
-            <div class="card-body">
-                <h5 class="card-title">{{ recipe.name }}</h5>
-                <p class="card-text">{{ recipe.description }}</p>
-            </div>
-        </div>
-        <app-recipe-item></app-recipe-item>
+        <app-recipe-item 
+        *ngFor="let recipeElement of recipes"
+        [recipe]="recipeElement"></app-recipe-item>
     </div>
 </div>
 
