passing data with event and property binding combined

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,3 +1,7 @@
+<!-- Card to display all elements  -->
+<a href="#" 
+class="card"
+(click)="onSelected()">
 <div 
 class="card" 
 style="width: 15rem;">
@@ -10,3 +14,4 @@ style="width: 15rem;">
         <p class="card-text">{{ recipe.description }}</p>
     </div>
 </div>
+</a>
