--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,41 +1,29 @@
 <!-- Recipe detail structure -->
-<div class="row">
-  <div class="col-xs-12">
-    <img 
-    src="{{ recipe.imagePath}}" 
-    alt="{{ recipe.name}}" 
-    class="img-responsive"
-    style="max-height: 300px">
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <h1>{{ recipe.name }}</h1>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <div class="btn-group">
-      <button 
-      type="button" 
-      class="btn btn-primary dropdown-toggle"
-      >Manage recipe
-      </button>
-      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Add Ingredients to shopping list</a>
-          <a class="dropdown-item" href="#">Edit recipes</a>
-          <a class="dropdown-item" href="#">Delete recipes</a>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="card">
+        <img src="{{ recipe.imagePath}}" alt="{{ recipe.name}}" class="img-responsive" style="max-height: 300px">
+        <div class="card-body">
+          <h5 class="card-title">{{ recipe.name }}</h5>
+          <div class="btn-group">
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">Manage Recipe</button>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">Edit recipes</a>
+              <a class="dropdown-item" href="#">Delete recipes</a>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          {{ recipe.description}}
+        </div>
+        <div class="card-body">
+          Ingredients
+        </div>
       </div>
     </div>
   </div>
 </div>
-<div class="row">
-    <div class="col-xs-12">
-      {{ recipe.description}}
-    </div>
-  </div>
-<div class="row">
-  <div class="col-xs-12">
-    Ingredients
-  </div>
-</div>
+
+
