--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -9,7 +9,7 @@
    *ngIf="selectedRecipe; else infoText"
    [recipe]="selectedRecipe"></app-recipe-detail>
    <ng-template #infoText>
-     <p>Please you must select a Recipe</p>
+     <p class="select-recipe">Please you must select a Recipe</p>
    </ng-template>
   </div>
 </div>
