--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -11,7 +11,7 @@
         <app-recipe-item 
         *ngFor="let recipeElement of recipes"
         [recipe]="recipeElement"
-        (recipeSelected)="onRecipeSelected(recipeElement)"></app-recipe-item>
+        ></app-recipe-item>
         <br>
     </div>
 </div>
