add ingredients to recipes

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -19,7 +19,13 @@
           {{ recipe.description}}
         </div>
         <div class="card-body">
-          Ingredients
+          <ul class="list-group">
+            <li 
+            class="list-group-item"
+            *ngFor="let ingredient of recipe.ingredients">
+            {{ ingredient.name }} - {{ ingredient.amount}}
+            </li>
+          </ul>
         </div>
       </div>
     </div>
