--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -10,6 +10,10 @@
             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">Manage Recipe</button>
             <div class="dropdown-menu">
+              <a 
+              class="dropdown-item" 
+              (click)="onAddToShoppingList()" 
+              style="cursor: pointer">Add ingredients to Shopping List</a>
               <a class="dropdown-item" href="#">Edit recipes</a>
               <a class="dropdown-item" href="#">Delete recipes</a>
             </div>
