creating child routes, route parameters and passing them dynamically to links

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,8 +22,12 @@
           Manage
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Save Data</a>
-          <a class="dropdown-item" href="#">Fetch Data</a>
+          <a 
+          class="dropdown-item" 
+          style="cursor: pointer">Save Data</a>
+          <a 
+          class="dropdown-item"
+          style="cursor: pointer">Fetch Data</a>
         </div>
       </li>
     </ul>
