--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -14,8 +14,12 @@
               class="dropdown-item" 
               (click)="onAddToShoppingList()" 
               style="cursor: pointer">Add ingredients to Shopping List</a>
-              <a class="dropdown-item" href="#">Edit recipes</a>
-              <a class="dropdown-item" href="#">Delete recipes</a>
+              <a 
+              class="dropdown-item"
+              style="cursor: pointer">Edit recipes</a>
+              <a 
+              class="dropdown-item"
+              style="cursor: pointer">Delete recipes</a>
             </div>
           </div>
         </div>
