--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.css
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.css
@@ -2,3 +2,8 @@
     color: black;
     text-decoration: none;
 }
+
+.nav-link.active {
+    background-color: rgba(169, 169, 169, 0.877);
+    opacity: 0.8;
+}
