--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -9,8 +9,9 @@
     <div class="col-xs-12">
     <!-- Display all elements of the array in app recipe item -->
         <app-recipe-item 
-        *ngFor="let recipeElement of recipes"
+        *ngFor="let recipeElement of recipes; let i = index"
         [recipe]="recipeElement"
+        [index]="i"
         ></app-recipe-item>
         <br>
     </div>
