--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,12 +3,6 @@
     <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <!-- if a recipe is selected, make app recipe detail appears, else, get infotext -->
-   <app-recipe-detail
-   *ngIf="selectedRecipe; else infoText"
-   [recipe]="selectedRecipe"></app-recipe-detail>
-   <ng-template #infoText>
-     <p class="select-recipe">Please you must select a Recipe</p>
-   </ng-template>
+    <router-outlet></router-outlet>
   </div>
 </div>
