--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -16,7 +16,8 @@
               style="cursor: pointer">Add ingredients to Shopping List</a>
               <a 
               class="dropdown-item"
-              style="cursor: pointer">Edit recipes</a>
+              style="cursor: pointer"
+              (click)="onEditRecipe()">Edit recipes</a>
               <a 
               class="dropdown-item"
               style="cursor: pointer">Delete recipes</a>
