--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,7 +1,7 @@
 <!-- Create a recipe card structure -->
 <div class="row">
     <div class="col-xs-12">
-        <button class="btn btn-success">New recipe</button>
+        <button class="btn btn-success" (click)="onNewRecipe()">New recipe</button>
     </div>
 </div>
 <hr>
