--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -2,16 +2,16 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <form>
+      <form (ngSubmit)="onAddItemform(f)" #f="ngForm">
         <div class="row">
           <div class="col-sm-5 form-group">
             <label for="name">Name</label>
-            <!-- local reference #... -->
             <input 
             type="text" 
             id="name" 
             class="form-control"
-            #nameInput>
+            name="name"
+            ngModel>
           </div>
           <div class="col-sm-3 form-group">
             <label for="amount">Amount</label>
@@ -19,13 +19,14 @@
             type="number" 
             id="amount" 
             class="form-control"
-            #amountInput>
+            name="amount"
+            ngModel>
           </div>
         </div>
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-              <button class="btn btn-success" type="submit" (click)="onAddItem()">Add</button>
+              <button class="btn btn-success" type="submit">Add</button>
               <button class="btn btn-danger" type="button">Delete</button>
               <button class="btn btn-primary" type="button">Clear</button>
             </div>
