--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,4 +1,5 @@
 <!-- shopping edit structure  -->
+<!-- pattern = Regex to allow only positive integers greater than 0 -->
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
@@ -22,7 +23,8 @@
             class="form-control"
             name="amount"
             ngModel
-            required>
+            required
+            pattern="^[1-9]+[0-9]*$">
           </div>
         </div>
         <div class="container">
@@ -32,7 +34,7 @@
               class="btn btn-success" 
               type="submit"
               [disabled]="!f.valid" 
-              >Add</button>
+              >{{ editMode ? 'Update' : 'Add'}}</button>
               <button class="btn btn-danger" type="button">Delete</button>
               <button class="btn btn-primary" type="button">Clear</button>
             </div>
