--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,3 +1,48 @@
-<p>
-  recipe-edit works!
-</p>
+<form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+  <button type="submit" class="btn btn-success mb-2">Save</button>
+  <button type="button" class="btn btn-danger ml-2 mb-2">Cancel</button>
+  <div class="form-group">
+    <label for="formGroupExampleInput">Name</label>
+    <input 
+    type="text" 
+    class="form-control" 
+    id="name"
+    formControlName="name">
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput2">Image URL</label>
+    <input 
+    type="text" 
+    class="form-control" 
+    id="imagePath"
+    formControlName="imagePath">
+  </div>
+  <img src="" class="img-responsive">
+  <div class="form-group">
+    <label for="description">Description</label>
+    <textarea 
+    class="form-control" 
+    id="description" 
+    rows="3"
+    formControlName="description"></textarea>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-5">
+      <input type="text" class="form-control">
+    </div>
+    <div class="form-group col-md-5">
+      <input type="number" class="form-control">
+    </div>
+    <div class="form-group col-md-2">
+      <button type="button" class="btn btn-danger">X</button>
+    </div>
+  </div>
+</form>
+
+
+
+
+
+
+
+
