adding new ingredients control

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,6 @@
 <!-- Card to display all elements  -->
 <a
-style="cursor: pointer"
+style="cursor: pointer; margin-top: 20px;"
 class="card nav-link"
 [routerLink]="[index]"
 routerLinkActive="active"
