--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,30 +3,58 @@
   <button type="button" class="btn btn-danger ml-2 mb-2">Cancel</button>
   <div class="form-group">
     <label for="formGroupExampleInput">Name</label>
-    <input type="text" class="form-control" id="name" formControlName="name">
+    <input 
+    type="text" 
+    class="form-control" 
+    id="name" 
+    formControlName="name">
   </div>
   <div class="form-group">
     <label for="formGroupExampleInput2">Image URL</label>
-    <input type="text" class="form-control" id="imagePath" formControlName="imagePath">
+    <input 
+    type="text" 
+    class="form-control" 
+    id="imagePath" 
+    formControlName="imagePath">
   </div>
   <img src="" class="img-responsive">
   <div class="form-group">
     <label for="description">Description</label>
-    <textarea class="form-control" id="description" rows="3" formControlName="description"></textarea>
+    <textarea 
+    class="form-control" 
+    id="description" 
+    rows="3" 
+    formControlName="description"></textarea>
   </div>
   <div class="form-row" formArrayName="ingredients">
-    <div class="col-lg-12" *ngFor="let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index"
-      [formGroupName]="i">
+    <div 
+    class="col-lg-12" 
+    *ngFor="let ingredientCtrl of getControls(); let i = index" 
+    [formGroupName]="i">
       <div class="row">
-        <div class="form-group col-md-5">
-          <input type="text" class="form-control" formControlName="name">
+        <div class="form-group col-5 col-xs-5">
+          <input 
+          type="text" 
+          class="form-control" 
+          formControlName="name">
         </div>
-        <div class="form-group col-md-5">
-          <input type="number" class="form-control" formControlName="amount">
+        <div class="form-group col-5 col-xs-5">
+          <input 
+          type="number" 
+          class="form-control" 
+          formControlName="amount">
         </div>
-        <div class="form-group col-md-2">
+        <div class="form-group col-2 col-xs-2">
           <button type="button" class="btn btn-danger">X</button>
         </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <button 
+        type="button" 
+        class="btn btn-success ml-2"
+        (click)=onAddIngredient()>Add Ingredient</button>
       </div>
     </div>
   </div>
