--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,5 +1,6 @@
 <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
-  <button type="submit" class="btn btn-success mb-2">Save</button>
+  <button type="submit" class="btn btn-success mb-2"
+  [disabled]="!recipeForm.valid">Save</button>
   <button type="button" class="btn btn-danger ml-2 mb-2">Cancel</button>
   <div class="form-group">
     <label for="formGroupExampleInput">Name</label>
@@ -54,7 +55,7 @@
         <button 
         type="button" 
         class="btn btn-success ml-2"
-        (click)=onAddIngredient()>Add Ingredient</button>
+        (click)="onAddIngredient()">Add Ingredient</button>
       </div>
     </div>
   </div>
