delete and clear button, redirecting after deleting a recipe, image preview

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -20,7 +20,8 @@
               (click)="onEditRecipe()">Edit recipes</a>
               <a 
               class="dropdown-item"
-              style="cursor: pointer">Delete recipes</a>
+              style="cursor: pointer"
+              (click)="onDeleteRecipe()">Delete recipes</a>
             </div>
           </div>
         </div>
