--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,7 +24,8 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a 
           class="dropdown-item" 
-          style="cursor: pointer">Save Data</a>
+          style="cursor: pointer"
+          (click)="onSaveData()">Save Data</a>
           <a 
           class="dropdown-item"
           style="cursor: pointer">Fetch Data</a>
