get method to get back recipes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -28,7 +28,8 @@
           (click)="onSaveData()">Save Data</a>
           <a 
           class="dropdown-item"
-          style="cursor: pointer">Fetch Data</a>
+          style="cursor: pointer"
+          (click)="onFetchData()">Fetch Data</a>
         </div>
       </li>
     </ul>
